--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     color: white;
     background-color: rgb(126, 39, 177);
     background-image: url("resources/bg_3.jpg");
+    box-shadow: 3px 5px 10px 3px rgb(15, 15, 15);
     padding: 200px;
     background-position: center;
     background-size: cover;
@@ -45,6 +46,7 @@ body {
     padding: 15px;
     margin-left: 15px;
     margin-right: 15px;
+    box-shadow: 3px 5px 10px 3px rgb(15, 15, 15);
 }
 .div-heading {
     font-size: 21px;
