--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
 body {
     margin: 0px;
     color: white;
@@ -67,4 +69,6 @@ body {
     background-color: #232323;
     color: white;
     padding: 10px;
+    font-size: 14px;
+    font-family: 'Roboto Mono', monospace;
 }
