Add some glassy effects to item cards and buttons

--- a/style.css
+++ b/style.css
@@ -54,22 +54,20 @@ body {
     margin-left: 0px;
     /*margin-right: 10px;*/
 }
+#title {
+    margin-right: 5px;
+}
 .nav-bar-link, #fun-fact {
     margin-left: 2.5px;
     margin-right: 2.5px;
-    padding: 10px;
+    font-style: normal;
+    /*padding: 10px;
     border-radius: 100px;
     color: black;
-    background-color: white;
-}
-.nav-bar-link:hover {
-    color: rgb(122, 27, 199);
-    cursor: pointer;
-    box-shadow: 3px 5px 10px 3px rgb(31, 31, 31);
+    background-color: white;*/
 }
 #heading_container {
     color: white;
-    background-color: rgb(126, 39, 177);
     background-image: url("resources/bg_3.jpg");
     box-shadow: 3px 5px 10px 3px rgb(15, 15, 15);
     padding: 20px;
@@ -84,15 +82,6 @@ body {
     font-size: 50px;
 }
 
-.item-card {
-    background-color: rgb(26, 26, 26);
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: 0px 0px 10px 15px rgb(10, 10, 10); /* rgb(100, 100, 233) rgb(27, 27, 199)*/ 
-    margin-top: 25px;
-    margin-bottom: 25px;
-}
-
 .div-heading {
     font-size: 21px;
 }
@@ -103,4 +92,48 @@ body {
     padding-bottom: 15px;
     font-size: 14px;
     font-family: 'Roboto Mono', monospace;
+}
+
+/* Glassy (V2) Style */
+.button {
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 100px; /* rounded corners */
+    padding: 10px 20px;
+    color: white;
+    font-weight: 500;
+    backdrop-filter: blur(8px); /* glass effect */
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.button:hover {
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+}
+
+.button:active {
+    transform: scale(1.03);
+}
+
+hr {
+    height: 5px;
+    border-radius: 100px;
+    width: 100%;
+    background: linear-gradient(to right, #1177ec, #1172f1);
+    border: none;
+}
+
+.item-card {
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 20px; /* rounded corners */
+    padding: 10px 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    backdrop-filter: blur(8px); /* glass effect */
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
