--- a/style.css
+++ b/style.css
@@ -30,8 +30,6 @@ body {
 }
 
 #main-page-content {
-    /*padding-left: 30px;
-    padding-right: 30px;*/
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -52,8 +50,8 @@ body {
 #top-nav-bar #title {
     font-weight: bold;
     margin-left: 0px;
-    /*margin-right: 10px;*/
 }
+
 #title {
     margin-right: 5px;
 }
@@ -69,17 +67,18 @@ body {
 #heading_container {
     color: white;
     background-image: url("resources/bg_3.jpg");
-    box-shadow: 3px 5px 10px 3px rgb(15, 15, 15);
-    padding: 20px;
+    box-shadow: 0px 0px 10px 0px rgb(15, 15, 15);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    border-radius: 20px;
-    margin-left: 15px;
-    margin-right: 15px;
 }
 #heading_container h1 {
     font-size: 50px;
+}
+#heading_container hr {
+    background: white;
+    width: 120px;
+    height: 6px;
 }
 
 .div-heading {
@@ -136,4 +135,10 @@ hr {
     backdrop-filter: blur(8px); /* glass effect */
     -webkit-backdrop-filter: blur(8px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.banner {
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
