--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
 
 /* Glassy (V2) Style */
 .button {
-    /*background: rgba(255, 255, 255, 0.2);*/
+    background: rgba(255, 255, 255, 0);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 100px; /* rounded corners */
     padding: 10px 20px;
