--- a/style.css
+++ b/style.css
@@ -153,9 +153,9 @@ hr {
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 20px; /* rounded corners */
-    padding: 10px 20px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    padding: 15px 20px 25px 20px; /* top right bottom left */
+    margin-top: 15px;
+    margin-bottom: 15px;
     backdrop-filter: blur(8px); /* glass effect */
     -webkit-backdrop-filter: blur(8px);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
