--- a/style.css
+++ b/style.css
@@ -166,3 +166,14 @@ hr {
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
+/* Customisation */
+.social-link {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 15px;
+}
+#wrap-handler {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
