--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 }
 #heading_container {
     color: white;
-    text-shadow: 10px, 0px, rgba(255, 255, 255, 1);
+    text-shadow: 0px 0px 8px rgb(136, 136, 136);
     background-image: url("resources/bg_3.jpg");
     box-shadow: 0px 0px 10px 0px rgb(15, 15, 15);
     background-position: center;
