--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
+:root {
+    --glassy-blur: blur(2px);
+}
+
 body {
     margin: 0px;
     padding: 0px;
@@ -36,7 +40,7 @@ body {
 #top-nav-bar {
     background-color: #131313d8;
     color: white;
-    backdrop-filter: blur(10px);
+    backdrop-filter: var(--glassy-blur);
     position: fixed;
     width: 85%;
     padding: 20px;
@@ -113,8 +117,8 @@ body {
     padding: 10px 20px;
     color: white;
     font-weight: 500;
-    backdrop-filter: blur(8px); /* glass effect */
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: var(--glassy-blur); /* glass effect */
+    -webkit-backdrop-filter: var(--glassy-blur);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: all 0.4s ease;
@@ -127,8 +131,8 @@ body {
     padding: 10px 20px;
     color: white;
     font-weight: 500;
-    backdrop-filter: blur(8px); /* glass effect */
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: var(--glassy-blur); /* glass effect */
+    -webkit-backdrop-filter: var(--glassy-blur);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: all 0.4s ease;
@@ -163,8 +167,8 @@ hr {
     padding: 15px 20px 25px 20px; /* top right bottom left */
     margin-top: 15px;
     margin-bottom: 15px;
-    backdrop-filter: blur(8px); /* glass effect */
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: var(--glassy-blur); /* glass effect */
+    -webkit-backdrop-filter: var(--glassy-blur);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
