--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ hr {
     margin-right: 10px;
     margin-bottom: 15px;
 }
-#wrap-handler {
+#wrap-handler {  /* For social links */
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
