Shave off some bloat from button style config

--- a/style.css
+++ b/style.css
@@ -110,9 +110,8 @@ body {
 }
 
 /* Glassy (V2) Style */
-.button {
-    background: rgba(255, 255, 255, 0);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+.button,
+.button_dark {
     border-radius: 100px; /* rounded corners */
     padding: 10px 20px;
     color: white;
@@ -123,19 +122,14 @@ body {
     cursor: pointer;
     transition: all 0.4s ease;
 }
+.button:active,
+.button_dark:active {
+    transform: scale(1.03);
+}
 
-.button_dark {
-    background: rgba(255, 255, 255, 0.2);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 100px; /* rounded corners */
-    padding: 10px 20px;
-    color: white;
-    font-weight: 500;
-    backdrop-filter: var(--glassy-blur); /* glass effect */
-    -webkit-backdrop-filter: var(--glassy-blur);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    transition: all 0.4s ease;
+.button {
+    background: rgba(255, 255, 255, 0);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .button:hover {
@@ -143,13 +137,14 @@ body {
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
 }
 
+.button_dark {
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .button_dark:hover {
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
-}
-
-.button:active {
-    transform: scale(1.03);
 }
 
 hr {
